--- a/web/aplledore/css/bootstrap.css
+++ b/web/aplledore/css/bootstrap.css
@@ -5841,7 +5841,7 @@ button.close {
   -webkit-overflow-scrolling: touch;
   outline: 0;
 }
-.modal.fade .modal-dialog {
+/*.modal.fade .modal-dialog {
   -webkit-transform: translate(0, -25%);
   -ms-transform: translate(0, -25%);
   -o-transform: translate(0, -25%);
@@ -5850,13 +5850,13 @@ button.close {
   -moz-transition: -moz-transform 0.3s ease-out;
   -o-transition: -o-transform 0.3s ease-out;
   transition: transform 0.3s ease-out;
-}
-.modal.in .modal-dialog {
+}*/
+/*.modal.in .modal-dialog {
   -webkit-transform: translate(0, 0);
   -ms-transform: translate(0, 0);
   -o-transform: translate(0, 0);
   transform: translate(0, 0);
-}
+}*/
 .modal-open .modal {
   overflow-x: hidden;
   overflow-y: auto;
@@ -5864,7 +5864,8 @@ button.close {
 .modal-dialog {
   position: relative;
   width: auto;
-  margin: 10px;
+  height: 100%;
+  margin: 0 auto !important;
 }
 .modal-content {
   position: relative;
