--- a/web/aplledore/css/style.css
+++ b/web/aplledore/css/style.css
@@ -1,3 +1,5 @@
+.btn{border-radius:0!important;}
+.o-h{overflow:hidden;}
 .p-0{padding: 0px !important;}
 .pt-0,.py-0{padding-top: 0px !important;}
 .pb-0,.py-0{padding-bottom: 0px !important;}
@@ -28,3 +30,21 @@
 .mb-10,.my-10{margin-bottom: 10px !important;}
 .ml-10,.mx-10{margin-left: 10px !important;}
 .mr-10,.mx-10{margin-right: 10px !important;}
+.dsModal .modal-content{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);border-radius:0;}
+[data-action="checkbox"]{position: relative;width: 100%;cursor: pointer;height: 20px;border-radius: 20px !important;display: block;}
+[data-action="checkbox"] .checkbox {vertical-align: top;margin: 0 3px 0 0;width: 17px;height: 17px;}
+[data-action="checkbox"] .checkbox + label {cursor: pointer;width: 46px;}
+[data-action="checkbox"] .checkbox:not(checked) {position: absolute;opacity: 0;}
+[data-action="checkbox"] .checkbox:not(checked) + label {position: absolute;left: 0;top: 5px;}
+[data-action="checkbox"] .checkbox:not(checked) + label:before {content: '';position: absolute;top: -4px;left: 0;width: 46px;height: 20px;border-radius: 13px;background: #fff;border: 2px solid #026565;}
+[data-action="checkbox"] .checkbox:not(checked) + label:after {content: '';position: absolute;top: 0px;left: 4px;width: 12px;height: 12px;border-radius: 10px;background: #026565;transition: all .2s;}
+[data-action="checkbox"] .checkbox:checked + label:before {background: #026565;}
+[data-action="checkbox"] .checkbox:checked + label:after {left: 30px;background: #fff}
+.dsPagination{display: block;overflow: hidden;list-style:none;}
+.dsPagination li{padding: 3px;float: left;}
+.dsPagination li a, .dsPagination li a:focus{width: 30px;height: 30px;text-align: center;float: left;line-height: 28px;color: #000;text-decoration: none;border: 1px solid #000;border-radius: 50% !important;}
+.dsPagination li a:hover,
+.dsPagination li a.active{color: #fff;border-color: #000;text-decoration: none;background-color: rgb(0, 19, 19);}
+.dsPagination li a i{line-height: 24px;height: 25px;width: 28px;vertical-align: middle;}
+.dsPagination div{display: block;width: 180px;height: 36px;overflow: hidden;float: left;position: relative;}
+.dsPagination span{display: flex;position: absolute;left: 0;height: 36px;}
