--- a/web/aplledore/css/style.css
+++ b/web/aplledore/css/style.css
@@ -48,3 +48,13 @@
 .dsPagination li a i{line-height: 24px;height: 25px;width: 28px;vertical-align: middle;}
 .dsPagination div{display: block;width: 180px;height: 36px;overflow: hidden;float: left;position: relative;}
 .dsPagination span{display: flex;position: absolute;left: 0;height: 36px;}
+.tagList span{padding: 5px;vertical-align:middle;border:none;border-radius:0;letter-spacing: 1.5px;font-size: 14px;margin-bottom: 5px;margin-right: 5px;float: left;}
+.tagList span.badge-default{background: #001313;}
+.tagList .close{font-size: 13px;line-height: 13px;margin-left: 5px;opacity: 1;color: rgba(255, 255, 255, 0.63);}
+#tagCreateNew input,
+#tagCreateNew select,
+#tagCreateNew input:focus,
+#tagCreateNew button{height: 32px;border-right: none;}
+.nav-tabs{border-color: #afafaf;}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link:hover, .nav-tabs .nav-link.active:hover, .nav-tabs .nav-item.show .nav-link:focus, .nav-tabs .nav-link.active:focus{border-color: #afafaf #afafaf transparent #afafaf;}
+#tagListTab{padding-bottom: 0;}
