--- a/web/aplledore/css/style.css
+++ b/web/aplledore/css/style.css
@@ -76,7 +76,9 @@
 .imageBlock figure{width: 100%;height: 100%;margin: 0;background-size: cover !important;}
 .imageBlock a.btn{position: absolute;bottom: 10px;color: #fff;right: 5px;font-size: 14px;letter-spacing: 1px;padding: 5px 10px;}
 .imagePagination{position: absolute;bottom: 0;left: 0;right: 0;z-index: 5;padding: 5px;background-color: #fff;}
-.closeModal{position: absolute;top:10px;right:10px;width: 30px;cursor: pointer;opacity: 0;-webkit-transition: all 0.3s ease-in-out; -moz-transition: all 0.3s ease-in-out; -o-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out;}
+.closeModal{position: absolute;top:10px;right:10px;width: 30px;cursor: pointer;opacity: 1;-webkit-transition: all 0.3s ease-in-out; -moz-transition: all 0.3s ease-in-out; -o-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out;}
 .closeModal svg{fill: #000;}
 .closeModal:hover svg{fill: #000;}
-
+.pasteImages{width:100%;padding: 5px;background-color: #fff;border-color: rgb(0, 19, 19);position: relative;}
+.pasteImages:hover,.pasteImages:focus{text-decoration: none;color: #0275d8;border-color: rgb(0, 19, 19);}
+.pasteImages span.icon-cross{position: absolute;top: 5px;right: 5px;display: block;font-size: 16px;cursor: pointer;color: #fff;padding: 8px;background-color: #000;}
