--- a/web/aplledore/css/bootstrap.css
+++ b/web/aplledore/css/bootstrap.css
@@ -2252,7 +2252,7 @@ th {
 .table > thead > tr > td,
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
-  padding: 5px 10px;
+  padding: 5px;
   line-height: 1.5384616;
   vertical-align: top;
   border-top: 1px solid #ddd;
