--- a/web/aplledore/css/core.css
+++ b/web/aplledore/css/core.css
@@ -1037,7 +1037,12 @@ textarea {
 .checkbox {
   margin-top: 8px;
   margin-bottom: 8px;
+  position: relative;
+  padding: 5px;
+  border: 1px solid #8c8c8c;
 }
+#authorRights .checkbox label{display: block;}
+#authorRights .checkbox input{position: absolute;left: 10px;top: 50%;margin: 0;transform: translateY(-50%);}
 .radio label,
 .checkbox label {
   padding-left: 28px;
@@ -6103,16 +6108,6 @@ h6.panel-title,
   padding: 15px;
   border-radius: 3px;
 }
-/* ------------------------------------------------------------------------------
-*
-*  # Close button component
-*
-*  Overrides for close button bootstrap component
-*
-*  Version: 1.0
-*  Latest update: May 25, 2015
-*
-* ---------------------------------------------------------------------------- */
 .close {
   text-shadow: none;
   opacity: 0.6;
@@ -6132,7 +6127,7 @@ h6.panel-title,
   top: 50%;
   left: 50%;
   width: 100%;
-  height: 100%;
+  /*height: 100%;*/
   transform: translate(-50%, -50%);
 }
 .modal-header {
