--- a/web/aplledore/css/style.css
+++ b/web/aplledore/css/style.css
@@ -1,7 +1,7 @@
 *::-webkit-scrollbar {width: 5px !important;margin-left: -15px !important;background-color: transparent !important;}
 *::-webkit-scrollbar-thumb {border-radius: 0 !important;background-color: rgb(0, 19, 19) !important;}
 *::-webkit-scrollbar-track {border-radius: 0 !important;background-color: transparent !important;}
-.btn{border-radius:0!important;}
+.btn, input, select{border-radius:0!important;}
 .o-h{overflow:hidden;}
 .p-0{padding: 0px !important;}
 .pt-0,.py-0{padding-top: 0px !important;}
